Change how image files are read